fix side nav not scrolling on small screens

--- a/src/components/navigation/side-nav/side-nav.scss
+++ b/src/components/navigation/side-nav/side-nav.scss
@@ -33,6 +33,7 @@ nav {
 
     &--list {
       border-top: solid 1px var(--color-surface-variant);
+      overflow: scroll;
     }
 
     &--link {
